--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -5,6 +5,7 @@
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --text-color: #333;
 }
 
 * {
@@ -24,3 +25,15 @@ body {
     text-rendering: optimizeSpeed;
 }
 
+
+button, input, [tabindex] {
+    outline: none;
+    border: none;
+}
+
+
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
+}
